--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,7 @@
             justify-content: center;
             text-align: center;
             margin-top: 250px;
-            background-color: black;
+            background-color: white;
         }
     </style>
   </head>
