Calender refactored for different sizes

--- a/index.htm
+++ b/index.htm
@@ -11,13 +11,15 @@
             display: flex;
             justify-content: center;
             text-align: center;
-            margin-top: 250px;
             background-color: white;
+        }
+        canvas {
+          background-color: white;
         }
     </style>
   </head>
   <body>
-    <canvas id="canvas" width="600" height="600" style="background-color: #333"></canvas>
+    <canvas id="canvas"></canvas>
 
     <script src="./scripts/script.js"></script>
   </body>
