--- a/index.htm
+++ b/index.htm
@@ -7,15 +7,20 @@
     <title>Clock</title>
 
     <style>
-        body {
-            display: flex;
-            justify-content: center;
-            text-align: center;
-            background-color: white;
-        }
-        canvas {
-          background-color: white;
-        }
+      body {
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        background-color: white;
+        margin: 0 auto;
+      }
+      canvas {
+        background-color: white;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
     </style>
   </head>
   <body>
