--- a/index.htm
+++ b/index.htm
@@ -4,24 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clock</title>
+    <title>Semicircle Clock</title>
 
-    <style>
-      body {
-        display: flex;
-        justify-content: center;
-        text-align: center;
-        background-color: white;
-        margin: 0 auto;
-      }
-      canvas {
-        background-color: white;
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-      }
-    </style>
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
     <canvas id="canvas"></canvas>
